updates about me

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="#" class="logo">About me</a>
+						<a  class="logo">About me</a>
 					</header>
 
 				<!-- Nav -->
