--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Portfolio</a></li>
+							<li class="active"><a >Portfolio</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://drive.google.com/file/d/1XIDGDmCq03bvyfylJeJduCW4BgP4N5nb/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
