--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										Quiz Game</a></h2>
 									</header>
 									<a href="https://git.generalassemb.ly/azamatbaiyzbekov/First-project" class="image fit"><img src="images/project1.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>JavaScript multiple-choice game that allow users to extend their general knowledge and guess right answers. Built using pure JavaScript and semantic HTML. Applied background CSS Animation.</p>
 									<ul class="actions special">
 										<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov/First-project" class="button">Check it out</a></li>
 									</ul>
@@ -80,7 +80,7 @@
 										FYT</a></h2>
 									</header>
 									<a href="https://fytapp.herokuapp.com/" class="image fit"><img src="images/project2.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Worked in a team to create a full stack fitness application that allow users to CRUD their work out activities. Built using Python3, Django, PostgreSQL. Includes MailChimp for subscription.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/azamatbaiyzbekov/Project-3-FitnessApp" class="button">Check it out</a></li>
 									</ul>
@@ -91,7 +91,7 @@
 										WayFarer</a></h2>
 									</header>
 									<a href="https://wayfarer-mern-frontend.herokuapp.com/" class="image fit"><img src="images/project3.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Full Stack application that allow users to create an account, and post about their favorite travel destinations. Built using NodeJs, Express, React, Mongoose/MongodDB, Bootstrap, Bcrypt/Express-session for auth.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/azamatbaiyzbekov/Wayfarer" class="button">Check it out</a></li>
 									</ul>
@@ -99,12 +99,12 @@
 								<article>
 									<header>
 										<h2><a >Project 4<br />
-										Final</a></h2>
+										HackBlog</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/hackblog.png" alt="" /></a>
+									<p>Developed MERN blog website with CRUD functionality that allow users to create blog posts and have their personal profile. Used Bootstrap for design.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check it out</a></li>
+										<li><a href="https://github.com/azamatbaiyzbekov/hackblog-frontend" class="button">Check it out</a></li>
 									</ul>
 								</article>
 					
