--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li class="active"><a >Portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://drive.google.com/file/d/1DbxF4nzW1X1c-uaXVwdW5b_hc0bCWdKi/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1infMXdwDsN4UgRIhs8a8COBxK7ur0PnH/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
 							<li><a href="https://www.linkedin.com/in/azamatbaiyzbekov/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -68,8 +68,8 @@
 										<h2><a >Project 1<br />
 										Quiz Game</a></h2>
 									</header>
-									<a href="https://git.generalassemb.ly/azamatbaiyzbekov/First-project" class="image fit"><img src="images/project1.jpg" alt="" /></a>
-									<p>JavaScript multiple-choice game that allow users to extend their general knowledge and guess right answers. Built using pure JavaScript and semantic HTML. Applied background CSS Animation.</p>
+									<a href="https://pages.git.generalassemb.ly/azamatbaiyzbekov/First-project/" class="image fit"><img src="images/project1.jpg" alt="" /></a>
+									<p>JavaScript multiple-choice game that lets users to extend their general knowledge and guess right answers. Built using JavaScript, jQuery and semantic HTML. Applied background CSS Animation.</p>
 									<ul class="actions special">
 										<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov/First-project" class="button">Check it out</a></li>
 									</ul>
@@ -102,7 +102,7 @@
 										HackBlog</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/hackblog.png" alt="" /></a>
-									<p>Developed MERN blog website with CRUD functionality that allow users to create blog posts and have their personal profile. Used Bootstrap for design.</p>
+									<p>Developed MERN blog platform with CRUD functionality that lets users to create blog posts and have their personal profile. Implemented Angolio search API.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/azamatbaiyzbekov/hackblog-frontend" class="button">Check it out</a></li>
 									</ul>
@@ -131,7 +131,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://drive.google.com/file/d/1DbxF4nzW1X1c-uaXVwdW5b_hc0bCWdKi/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
+									<li><a href="https://drive.google.com/file/d/1infMXdwDsN4UgRIhs8a8COBxK7ur0PnH/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
 									<li><a href="https://www.linkedin.com/in/azamatbaiyzbekov/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
