--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Portfolio by Aza</title>
+		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,9 +33,9 @@
 							<li class="active"><a >Portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://drive.google.com/file/d/1infMXdwDsN4UgRIhs8a8COBxK7ur0PnH/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1EV2IJcGFF2XzfhZP1vDa_98gbb0rNh8Q/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
 							<li><a href="https://www.linkedin.com/in/azamatbaiyzbekov/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/azamatbaiyzbekov" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -46,10 +46,10 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a >Aza Baiyzbekov<br /></h2>
-									<p>Based in San Francisco, California, I am a recent graduate of General Assembly's Software Engineering Bootcamp.
-										I enjoy collaborating on interesting projects, that help me to improve my skills and expend my capabilites. 
-										Technologies I use: HTML, CSS, Javascript, Bootstrap, NodeJS, Express, MongoDB, React, Python, Django, Postgres.
-										Prior coming to the world of programming, I spent several years working both in tech and non technical fields as researcher.
+									<p>I am a Front-End Software Engineer with a degree in Social Sciences. 
+										I enjoy collaborating on interesting projects and strive to improve my knowledge. 
+										Technologies I use: HTML, CSS, Javascript, Bootstrap, NodeJS, Express, MongoDB, React, Python, Django and Postgres.
+										Prior coming to the world of programming, I spent several years working both in tech and non technical fields as a researcher.
 										Over the years, I have developed this passion for building and creativity, and was fascinated by the fact that I can apply my research skills in software engineering as well. 
 
 
@@ -71,7 +71,7 @@
 									<a href="https://pages.git.generalassemb.ly/azamatbaiyzbekov/First-project/" class="image fit"><img src="images/project1.jpg" alt="" /></a>
 									<p>JavaScript multiple-choice game that lets users to extend their general knowledge and guess right answers. Built using JavaScript, jQuery and semantic HTML. Applied background CSS Animation.</p>
 									<ul class="actions special">
-										<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov/First-project" class="button">Check it out</a></li>
+										<li><a href="https://github.com/azamatbaiyzbekov/first-project-quiz-game" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								<article>
@@ -131,9 +131,9 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://drive.google.com/file/d/1infMXdwDsN4UgRIhs8a8COBxK7ur0PnH/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
+									<li><a href="https://drive.google.com/file/d/1EV2IJcGFF2XzfhZP1vDa_98gbb0rNh8Q/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
 									<li><a href="https://www.linkedin.com/in/azamatbaiyzbekov/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://git.generalassemb.ly/azamatbaiyzbekov" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/azamatbaiyzbekov" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
