adds new projects

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li class="active"><a >Portfolio</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://drive.google.com/file/d/1EV2IJcGFF2XzfhZP1vDa_98gbb0rNh8Q/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
+							<li><a href="https://drive.google.com/file/d/1B5zOrKMLsraEE5lWW5URC4njKh5yU1bo/view" class="fa fa-file"><span class="label">Resume</span></a></li>
 							<li><a href="https://www.linkedin.com/in/azamatbaiyzbekov/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/azamatbaiyzbekov" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -65,16 +65,27 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a >Project 1<br />
-										Quiz Game</a></h2>
+										<h2><a >Project 4<br />
+											HackBlog</a></h2>
 									</header>
-									<a href="https://pages.git.generalassemb.ly/azamatbaiyzbekov/First-project/" class="image fit"><img src="images/project1.jpg" alt="" /></a>
-									<p>JavaScript multiple-choice game that lets users to extend their general knowledge and guess right answers. Built using JavaScript, jQuery and semantic HTML. Applied background CSS Animation.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/azamatbaiyzbekov/first-project-quiz-game" class="button">Check it out</a></li>
-									</ul>
-								</article>
-								<article>
+										<a href="#" class="image fit"><img src="images/hackblog.png" alt="" /></a>
+										<p>Developed MERN blog platform with CRUD functionality that lets users to create blog posts and have their personal profile. Implemented Angolio search API.</p>
+										<ul class="actions special">
+											<li><a href="https://github.com/azamatbaiyzbekov/hackblog-frontend" class="button">Check it out</a></li>
+										</ul>
+									</article>
+									<article>
+										<header>
+											<h2><a >Project 3<br />
+											WayFarer</a></h2>
+										</header>
+										<a href="https://wayfarer-mern-frontend.herokuapp.com/" class="image fit"><img src="images/project3.jpg" alt="" /></a>
+										<p>Full Stack application that allow users to create an account, and post about their favorite travel destinations. Built using NodeJs, Express, React, Mongoose/MongodDB, Bootstrap, Bcrypt/Express-session for auth.</p>
+										<ul class="actions special">
+											<li><a href="https://github.com/azamatbaiyzbekov/Wayfarer" class="button">Check it out</a></li>
+										</ul>
+									</article>
+									<article>
 									<header>
 										<h2><a >Project 2<br />
 										FYT</a></h2>
@@ -87,26 +98,37 @@
 								</article>
 								<article>
 									<header>
-										<h2><a >Project 3<br />
-										WayFarer</a></h2>
-									</header>
-									<a href="https://wayfarer-mern-frontend.herokuapp.com/" class="image fit"><img src="images/project3.jpg" alt="" /></a>
-									<p>Full Stack application that allow users to create an account, and post about their favorite travel destinations. Built using NodeJs, Express, React, Mongoose/MongodDB, Bootstrap, Bcrypt/Express-session for auth.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/azamatbaiyzbekov/Wayfarer" class="button">Check it out</a></li>
-									</ul>
+										<h2><a > Project<br />
+											Giphy-Finder</a></h2>
+										</header>
+										<a href="https://intense-mesa-29314.herokuapp.com/" class="image fit"><img src="images/giphy2.jpg" alt="" /></a>
+										<p>MVP single page front-end app built with React, Bootstrap, Material-UI. Connects to external API from the GIPHY Developers to display search results and play the gifs</p>
+										<ul class="actions special">
+											<li><a href="https://github.com/azamatbaiyzbekov/GiphyFinder" class="button">Check it out</a></li>
+										</ul>
 								</article>
 								<article>
-									<header>
-										<h2><a >Project 4<br />
-										HackBlog</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/hackblog.png" alt="" /></a>
-									<p>Developed MERN blog platform with CRUD functionality that lets users to create blog posts and have their personal profile. Implemented Angolio search API.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/azamatbaiyzbekov/hackblog-frontend" class="button">Check it out</a></li>
-									</ul>
-								</article>
+										<header>
+											<h2><a >Project 1<br />
+												Quiz Game</a></h2>
+											</header>
+											<a href="https://pages.git.generalassemb.ly/azamatbaiyzbekov/First-project/" class="image fit"><img src="images/project1.jpg" alt="" /></a>
+											<p>JavaScript multiple-choice game that lets users to extend their general knowledge and guess right answers. Built using JavaScript, jQuery and semantic HTML. Applied background CSS Animation.</p>
+											<ul class="actions special">
+												<li><a href="https://github.com/azamatbaiyzbekov/first-project-quiz-game" class="button">Check it out</a></li>
+											</ul>
+									</article>
+									<article>
+											<header>
+												<h2><a>Project<br />
+													Youtube-Search-Alt</a></h2>
+												</header>
+												<a href="https://glacial-journey-10506.herokuapp.com/" class="image fit"><img src="images/youtube2.jpg" alt="" /></a>
+												<p>Developed single page App, that connects to Youtube API and let users to search for a videos. Built using React and Materialize Design</p>
+												<ul class="actions special">
+													<li><a href="https://github.com/azamatbaiyzbekov/youtube-alternative-search" class="button">Check it out</a></li>
+												</ul>
+										</article>
 					
 							</section>
 
@@ -131,7 +153,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://drive.google.com/file/d/1EV2IJcGFF2XzfhZP1vDa_98gbb0rNh8Q/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
+									<li><a href="https://drive.google.com/file/d/1B5zOrKMLsraEE5lWW5URC4njKh5yU1bo/view?usp=sharing" class="fa fa-file"><span class="label">Resume</span></a></li>
 									<li><a href="https://www.linkedin.com/in/azamatbaiyzbekov/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/azamatbaiyzbekov" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
